--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "4.7.4",
+		"@types/bun": "latest"
+	},
+	"private": true,
+	"dependencies": {
+		"@beads/bd": "^0.29.0"
 	}
 }
