--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "1.0",
 	"minAppVersion": "0.15.0",
 	"description": "Gohans KapilGupta",
-	"author": "Obsidian",
+	"author": "Gohans",
 	"authorUrl": "https://obsidian.md",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
