--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	"minAppVersion": "0.15.0",
 	"description": "Gohans KapilGupta",
 	"author": "Gohans",
-	"authorUrl": "https://obsidian.md",
+	"authorUrl": "https://x.com/GohansVN",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
 }
